<resources>
    <string name="instructions">
Place your fingertip on the Home button to verify your identity
</string>
    <string name="app_name">Gravo Collector</string>
    <string name="splash_icon_description">Splash icon xml</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_description">GRAVO is also a platform through which environmental information and educational material can be accessed with ease for all subscribers.</string>
    <string name="gravo_logo_full_desc">Gravo Logo Full</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="login_hint_password">password</string>
    <string name="login_hint_email">Email</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="tnc">Gravo clearly mentions that all content belongs to Gravo: 4.1 Rights in Gravo’s Content All copyright, trade marks, design rights, patents and other intellectual property rights (registered and unregistered) in and on Gravo Online Services and Gravo Content belong to the Gravo and/or third parties (which may include you or other users.) The Gravo reserves all of its rights in Gravo Content and Gravo Online Services. Nothing in the Terms grants you a right or license to use any trade mark, design right or copyright owned or controlled by the Gravo or any other third party except as expressly provided in the Terms. Gravo If you operate a SaaS app, the “Termination clauses” will be very important. The relationship with your customers can end for any number of reasons, from a customer changing careers to a new and better SaaS option becoming available or just general dissatisfaction with a service.</string>
    <string name="bulk_items">BULK ITEMS</string>
    <string name="bulk_item">Bulk Item</string>
    <string name="not_registered">You have not registered as a driver!</string>
    <string name="total_estimated_price_label">TOTAL PRICE</string>
    <string name="total_weight_label">TOTAL WEIGHT</string>
    <string name="password">Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="noconnectivity">Network connection error. \n Please make sure your network settings are correct and your network connection is active, or try again later. </string>
    <string name="unexpectederror">An unexpected error has occurred. We apologize for the inconvenience!</string>
    <string name="userisrejected">Unfortunately, You do not fit the requirements to be a collector. \nWe apologize for the inconvenience!</string>
    <string name="userhasregistered">The email you provided already has an existing account. Please try logging in</string>
    <string name="userhasnotregistered">The email you provided does not have a account with us, Please register for an account.</string>
    <string name="acceptance">Thank you for registering an account with us. \nHowever, You have not been approved to drive with Gravo yet! We will get back to you shortly.\n\nThank you for your patience!
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
