<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recycle_frame_anim"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context="com.greenravolution.gravodriver.loginsignup.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:contentDescription="@string/gravo_logo_full_desc"
                app:srcCompat="@drawable/gravo_logo_white" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/pager"
                android:text="WELCOME"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_above="@id/indicator" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/btn_brand_green_round"
                android:onClick="onClick"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Not a Driver yet?"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_white_round"
                android:onClick="onClick"
                android:text="@string/create_account"
                android:textColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
